Allow an arbitrary number of reporting intervals in custom order
Issue: https://forum.portfolio-performance.info/t/number-of-report-intervals-limited-to-20/8102